<package>
  <name>saw_force_dimension_sdk_examples</name>
  <version>1.1.0</version>
  <description>
  sawForceDimensionSDK Examples
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawForceDimensionSDK</url>

  <build_depend>cisst</build_depend>
  <build_depend>saw_force_dimension_sdk</build_depend>

  <run_depend>cisst</run_depend>
  <run_depend>saw_force_dimension_sdk</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
