<?xml version="1.0"?>
<package>
  <name>saw_force_dimension_config</name>
  <version>2.1.0</version>
  <description>sawForceDimensionSDK config files</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>

  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawForceDimensionSDK</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
